# remote_backup_m1

./: CMakeLists.txt  README.md
client/: CMakeLists.txt  main.cpp
client/communication/: f_message.cpp  f_message.h
client/core/: auth_data.cpp  auth_data.h  connection.cpp  connection.h  file_watcher.cpp  file_watcher.h  scheduler.cpp  scheduler.h
client/directory/: c_resource.cpp  c_resource.h
server/: CMakeLists.txt  main.cpp
server/communication/: message_queue.cpp  message_queue.h
server/core/: connection.cpp  connection.h  open_streams.cpp  open_streams.h  request_handler.cpp  request_handler.h  server.cpp  server.h  user.cpp  user.h
server/directory/: s_resource.cpp  s_resource.h
server/files/: CONFIG.txt
server/utilities/: logger.cpp  logger.h
shared/communication/: f_message.cpp  f_message.h  message.cpp  message.h  tlv_view.cpp  tlv_view.h  types.h
shared/directory/: dir.cpp  dir.h
shared/utilities/: tools.cpp  tools.h
